greated a Main div to hold the main blog post and the side panel where the other posts will go. Added some CSS - having as isue with making overlay text a different colour. Also struggling with a spacing issue on the main div. Intro section still needs css.

--- a/css/devPage.css
+++ b/css/devPage.css
@@ -1,6 +1,137 @@
 * { 
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #111210;
+}
+
+nav {
+    padding: 3vh 4vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.ryalto-logo {
+    height: 40px;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    font-size: 1em;
+}
+
+.logo {
+    display: flex;
+    align-content: flex-end;
+    gap: .5vw;
+}
+
+.pageTitle{
+    font-size: 1.8em;
+}
+
+.navLinks {
+    display: flex;
+    align-content:flex-start
+}
+
+.navLink {
+
+    padding-left: 1vw;
+    font-size: 1em;
+}
+
+.darkModeToggle {
+    width: 1em;
+    border: none;
+}
+
+.intro {
+    font-weight: 200;
+    padding: 0 15vw;
+    margin-bottom: 4vh;
+}
+
+main {
+    margin: 3vh 1vw;
+}
+.main-view {
+    display: flex;
+    justify-content: center;
+
+}
+
+.newestPost h3 {
+    font-weight: 600;
+    margin-bottom: 2vh;
+}
+
+.newestPost {
+    display: flex;
+    justify-content: flex-start;
+    position: relative;
+    padding: 0 7vw;
+    max-width:600px;
+    gap: 20px;
+    cursor: pointer;
+}
+
+.newestPost img {
+    max-width: 600px;
+    border-radius: 0.4vw;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 1% 8%;
+    background-color: rgb(41, 41, 41, 0.8);
+    color: aliceblue;
+    position: absolute;
+    text-wrap: wrap;
+}
+
+.newestPostBlurb p {
+    font-weight: 200;
+}
+
+.latestPosts {
+    max-width: 50%;
+    position: relative;
+}
+.sidePanel {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+ul {
+    list-style-type:none;
+    gap:20px ;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+ul h6 {
+    
+    text-transform: uppercase;
+    font-weight: 100;
+}
+.cardPost {
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.16) 5px 3px 30px;
+    padding: 18px 20px;
+    width: 20vw;
+    height: 15vh;
+
 }
